--- a/settings.toml
+++ b/settings.toml
@@ -5,8 +5,13 @@ DATABASE_NAME = ""
 DATABASE_HOST = ""
 DATABASE_PORT = ""
 SOLR_URL = ""
-SOLR_COLLECTION_FACILITy = ""
-SOLR_COLLECTION_ASSET = ""
+SOLR_COLLECTION_FACILITY = "facility"
+SOLR_COLLECTION_ASSET = "asset"
+DB_PROC_GET_ASSETS = "get_assets"
+DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_CREATE_ASSET = "create_asset"
+DB_PROC_UPDATE_ASSET = "update_asset"
+DB_PROC_DELETE_ASSET = "delete_asset"
 
 [development]
 # Settings for the development environment
@@ -15,8 +20,13 @@ DATABASE_NAME = "us_dev_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
 SOLR_URL = "http://localhost:8983/solr"
-SOLR_COLLECTION_FACILITy = "facility"
+SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
+DB_PROC_GET_ASSETS = "get_assets"
+DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_CREATE_ASSET = "create_asset"
+DB_PROC_UPDATE_ASSET = "update_asset"
+DB_PROC_DELETE_ASSET = "delete_asset"
 
 [integration]
 # Settings for the development environment
@@ -25,8 +35,13 @@ DATABASE_NAME = "us_int_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
 SOLR_URL = "http://localhost:8983/solr"
-SOLR_COLLECTION_FACILITy = "facility"
+SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
+DB_PROC_GET_ASSETS = "get_assets"
+DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_CREATE_ASSET = "create_asset"
+DB_PROC_UPDATE_ASSET = "update_asset"
+DB_PROC_DELETE_ASSET = "delete_asset"
 
 [production]
 # Settings for the production environment
@@ -35,5 +50,10 @@ DATABASE_NAME = "us_prd_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
 SOLR_URL = "http://localhost:8983/solr"
-SOLR_COLLECTION_FACILITy = "facility"
+SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
+DB_PROC_GET_ASSETS = "get_assets"
+DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_CREATE_ASSET = "create_asset"
+DB_PROC_UPDATE_ASSET = "update_asset"
+DB_PROC_DELETE_ASSET = "delete_asset"
