--- a/settings.toml
+++ b/settings.toml
@@ -8,7 +8,8 @@ SOLR_URL = ""
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -23,7 +24,8 @@ SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -38,7 +40,8 @@ SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -53,7 +56,8 @@ SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_asset_by_ids"
+DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
