--- a/settings.toml
+++ b/settings.toml
@@ -4,6 +4,7 @@ LOG_LEVEL = "info"
 DATABASE_NAME = ""
 DATABASE_HOST = ""
 DATABASE_PORT = ""
+DATABASE_SCHEMA = ""
 SOLR_URL = ""
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
@@ -20,6 +21,7 @@ LOG_LEVEL = "debug"
 DATABASE_NAME = "us_dev_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
+DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
@@ -36,6 +38,7 @@ LOG_LEVEL = "debug"
 DATABASE_NAME = "us_int_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
+DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
@@ -52,6 +55,7 @@ LOG_LEVEL = "info"
 DATABASE_NAME = "us_prd_daas"
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
+DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
