Enable notify/listener.

--- a/settings.toml
+++ b/settings.toml
@@ -8,12 +8,17 @@ DATABASE_SCHEMA = ""
 SOLR_URL = ""
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
-DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_GET_ASSET = "get_assets"
+DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
+DB_CHANNEL_ASSET = "asset_channel"
+DOMAIN_NAME_ASSET = "ASSET"
+IDX_BUFFER_SIZE_ASSET = "10"
+IDX_BUFFER_DURATION_ASSET = "10"
+IDX_FETCH_KEY_ASSET = "asset_id"
 
 [development]
 # Settings for the development environment
@@ -25,12 +30,17 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
-DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_GET_ASSET = "get_assets"
+DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
+DB_CHANNEL_ASSET = "asset_channel"
+DOMAIN_NAME_ASSET = "ASSET"
+IDX_BUFFER_SIZE_ASSET = "10"
+IDX_BUFFER_DURATION_ASSET = "10"
+IDX_FETCH_KEY_ASSET = "asset_id"
 
 [integration]
 # Settings for the development environment
@@ -42,12 +52,17 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
-DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_GET_ASSET = "get_assets"
+DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
+DB_CHANNEL_ASSET = "asset_channel"
+DOMAIN_NAME_ASSET = "ASSET"
+IDX_BUFFER_SIZE_ASSET = "10"
+IDX_BUFFER_DURATION_ASSET = "10"
+IDX_FETCH_KEY_ASSET = "asset_id"
 
 [production]
 # Settings for the production environment
@@ -59,9 +74,14 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
-DB_PROC_GET_ASSETS = "get_assets"
-DB_PROC_GET_ASSET_ID = "get_assets_by_id"
+DB_PROC_GET_ASSET = "get_assets"
+DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
+DB_CHANNEL_ASSET = "asset_channel"
+DOMAIN_NAME_ASSET = "ASSET"
+IDX_BUFFER_SIZE_ASSET = "10"
+IDX_BUFFER_DURATION_ASSET = "10"
+IDX_FETCH_KEY_ASSET = "asset_id"
