--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -12,6 +12,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_assets"
 DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
@@ -38,6 +39,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_assets"
 DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
@@ -64,6 +66,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_assets"
 DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
@@ -90,6 +93,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_assets"
 DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
 DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
