--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -13,9 +13,9 @@ SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_assets"
-DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
-DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
+DB_PROC_GET_ASSET = "get_asset"
+DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
+DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -23,7 +23,7 @@ DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_id"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
 
 [development]
 # Settings for the development environment
@@ -40,9 +40,9 @@ SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_assets"
-DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
-DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
+DB_PROC_GET_ASSET = "get_asset"
+DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
+DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -50,7 +50,7 @@ DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_id"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
 
 [integration]
 # Settings for the development environment
@@ -67,9 +67,9 @@ SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_assets"
-DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
-DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
+DB_PROC_GET_ASSET = "get_asset"
+DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
+DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -77,7 +77,7 @@ DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_id"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
 
 [production]
 # Settings for the production environment
@@ -94,9 +94,9 @@ SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_assets"
-DB_PROC_GET_BY_ID_ASSET = "get_assets_by_id"
-DB_PROC_UPSERT_ASSET = "asset_upsert_from_json"
+DB_PROC_GET_ASSET = "get_asset"
+DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
+DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_CREATE_ASSET = "create_asset"
 DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
@@ -104,4 +104,4 @@ DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_id"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
