--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -12,6 +12,8 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
+DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_asset"
 DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
@@ -21,6 +23,7 @@ DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
 DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
+IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
@@ -39,6 +42,8 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
+DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_asset"
 DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
@@ -48,6 +53,7 @@ DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
 DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
+IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
@@ -66,6 +72,8 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
+DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_asset"
 DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
@@ -75,6 +83,7 @@ DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
 DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
+IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
@@ -93,6 +102,8 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
+DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_asset"
 DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
@@ -102,6 +113,7 @@ DB_PROC_UPDATE_ASSET = "update_asset"
 DB_PROC_DELETE_ASSET = "delete_asset"
 DB_CHANNEL_ASSET = "asset_channel"
 DOMAIN_NAME_ASSET = "ASSET"
+IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
