--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -18,11 +18,14 @@ DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ASSET = "get_asset"
 DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
 DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
-DB_PROC_CREATE_ASSET = "create_asset"
-DB_PROC_UPDATE_ASSET = "update_asset"
-DB_PROC_DELETE_ASSET = "delete_asset"
+DB_PROC_GET_SERVICE= "get_service"
+DB_PROC_GET_BY_ID_SERVICE = "get_service_by_id"
+DB_PROC_UPSERT_SERVICE = "upsert_service_from_json"
 DB_CHANNEL_ASSET = "asset_channel"
+DOMAIN_NAME_ACCOUT = "ACCOUNT"
+DOMAIN_NAME_FACILITY = "FACILITY"
 DOMAIN_NAME_ASSET = "ASSET"
+DOMAIN_NAME_SERVICE = "SERVICE"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
@@ -38,25 +41,11 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
-SOLR_COLLECTION_FACILITY = "facility"
-SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
-DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
-DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_asset"
-DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
-DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
-DB_PROC_CREATE_ASSET = "create_asset"
-DB_PROC_UPDATE_ASSET = "update_asset"
-DB_PROC_DELETE_ASSET = "delete_asset"
-DB_CHANNEL_ASSET = "asset_channel"
-DOMAIN_NAME_ASSET = "ASSET"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
 
 [integration]
 # Settings for the development environment
@@ -72,21 +61,9 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
-DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
-DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_asset"
-DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
-DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
-DB_PROC_CREATE_ASSET = "create_asset"
-DB_PROC_UPDATE_ASSET = "update_asset"
-DB_PROC_DELETE_ASSET = "delete_asset"
-DB_CHANNEL_ASSET = "asset_channel"
-DOMAIN_NAME_ASSET = "ASSET"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
 
 [production]
 # Settings for the production environment
@@ -102,18 +79,6 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
-DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
-DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ASSET = "get_asset"
-DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
-DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
-DB_PROC_CREATE_ASSET = "create_asset"
-DB_PROC_UPDATE_ASSET = "update_asset"
-DB_PROC_DELETE_ASSET = "delete_asset"
-DB_CHANNEL_ASSET = "asset_channel"
-DOMAIN_NAME_ASSET = "ASSET"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
