--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -1,11 +1,6 @@
 [default]
 # Default settings for all environments
 LOG_LEVEL = "info"
-DATABASE_NAME = ""
-DATABASE_HOST = ""
-DATABASE_PORT = ""
-DATABASE_SCHEMA = ""
-SOLR_URL = ""
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
 SOLR_COLLECTION_FACILITY = "facility"
@@ -15,13 +10,22 @@ PAGINATION_SIZE_SOLR = "10"
 DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
 DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
+DB_PROC_GET_ACCOUNT = "get_account"
+DB_PROC_GET_FACILITY = "get_facility"
 DB_PROC_GET_ASSET = "get_asset"
-DB_PROC_GET_BY_ID_ASSET = "get_asset_by_id"
-DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_GET_SERVICE= "get_service"
-DB_PROC_GET_BY_ID_SERVICE = "get_service_by_id"
+DB_PROC_GET_BY_ID_ACCOUNT = "get_account_by_json"
+DB_PROC_GET_BY_ID_FACILITY = "get_facility_by_json"
+DB_PROC_GET_BY_ID_ASSET = "get_asset_by_json"
+DB_PROC_GET_BY_ID_SERVICE = "get_service_by_json"
+DB_PROC_UPSERT_ACCOUNT = "upsert_account_from_json"
+DB_PROC_UPSERT_FACILITY = "upsert_facility_from_json"
+DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_PROC_UPSERT_SERVICE = "upsert_service_from_json"
+DB_CHANNEL_ACCOUNT = "account_channel"
+DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
+DB_CHANNEL_SERVICE = "service_channel"
 DOMAIN_NAME_ACCOUT = "ACCOUNT"
 DOMAIN_NAME_FACILITY = "FACILITY"
 DOMAIN_NAME_ASSET = "ASSET"
@@ -29,7 +33,10 @@ DOMAIN_NAME_SERVICE = "SERVICE"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
+IDX_FETCH_KEY_ACCOUNT = "acc_nbr"
+IDX_FETCH_KEY_FACILITy = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
+IDX_FETCH_KEY_SERVICE = "svc_nbr"
 
 [development]
 # Settings for the development environment
