--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -7,6 +7,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+DB_PROC_LOG = "daas_log"
 DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
 DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
@@ -57,8 +58,8 @@ IDX_BUFFER_DURATION_ASSET = "10"
 [integration]
 # Settings for the development environment
 LOG_LEVEL = "debug"
-DATABASE_NAME = "us_dev_daas"
-DATABASE_HOST = "host.docker.internal"
+DATABASE_NAME = "us_int_daas"
+DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
 DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
