--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -10,6 +10,10 @@ PAGINATION_SIZE_SOLR = "10"
 DB_PROC_LOG = "daas_log"
 DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
 DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
+DB_PROC_GET_INDEX_OVERRIDE = "get_index_override"
+DB_FIELD_INDEX_OVERRIDE_SOURCE_TS = "index_source_ts"
+DB_FIELD_INDEX_OVERRIDE_TARGET_TS = "index_target_ts"
+DB_PROC_CLEAN_INDEX_OVERRIDE = "clean_index_override"
 DB_PROC_GET_USER_FACILITY = "get_user_facility"
 DB_PROC_GET_ACCOUNT = "get_account"
 DB_PROC_GET_FACILITY = "get_facility"
@@ -34,6 +38,7 @@ DOMAIN_NAME_SERVICE = "SERVICE"
 IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
+IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_FETCH_KEY_ACCOUNT = "acc_nbr"
 IDX_FETCH_KEY_FACILITy = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
