rename proc > func

--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -7,26 +7,26 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-DB_PROC_LOG = "daas_log"
-DB_PROC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
-DB_PROC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
-DB_PROC_GET_INDEX_OVERRIDE = "get_index_override"
+DB_FUNC_LOG = "daas_log"
+DB_FUNC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
+DB_FUNC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
+DB_FUNC_GET_INDEX_OVERRIDE = "get_index_override"
 DB_FIELD_INDEX_OVERRIDE_SOURCE_TS = "index_source_ts"
 DB_FIELD_INDEX_OVERRIDE_TARGET_TS = "index_target_ts"
-DB_PROC_CLEAN_INDEX_OVERRIDE = "clean_index_override"
-DB_PROC_GET_USER_FACILITY = "get_user_facility"
-DB_PROC_GET_ACCOUNT = "get_account"
-DB_PROC_GET_FACILITY = "get_facility"
-DB_PROC_GET_ASSET = "get_asset"
-DB_PROC_GET_SERVICE= "get_service"
-DB_PROC_GET_BY_ID_ACCOUNT = "get_account_by_json"
-DB_PROC_GET_BY_ID_FACILITY = "get_facility_by_json"
-DB_PROC_GET_BY_ID_ASSET = "get_asset_by_json"
-DB_PROC_GET_BY_ID_SERVICE = "get_service_by_json"
-DB_PROC_UPSERT_ACCOUNT = "upsert_account_from_json"
-DB_PROC_UPSERT_FACILITY = "upsert_facility_from_json"
-DB_PROC_UPSERT_ASSET = "upsert_asset_from_json"
-DB_PROC_UPSERT_SERVICE = "upsert_service_from_json"
+DB_FUNC_CLEAN_INDEX_OVERRIDE = "clean_index_override"
+DB_FUNC_GET_USER_FACILITY = "get_user_facility"
+DB_FUNC_GET_ACCOUNT = "get_account"
+DB_FUNC_GET_FACILITY = "get_facility"
+DB_FUNC_GET_ASSET = "get_asset"
+DB_FUNC_GET_SERVICE= "get_service"
+DB_FUNC_GET_BY_ID_ACCOUNT = "get_account_by_json"
+DB_FUNC_GET_BY_ID_FACILITY = "get_facility_by_json"
+DB_FUNC_GET_BY_ID_ASSET = "get_asset_by_json"
+DB_FUNC_GET_BY_ID_SERVICE = "get_service_by_json"
+DB_FUNC_UPSERT_ACCOUNT = "upsert_account_from_json"
+DB_FUNC_UPSERT_FACILITY = "upsert_facility_from_json"
+DB_FUNC_UPSERT_ASSET = "upsert_asset_from_json"
+DB_FUNC_UPSERT_SERVICE = "upsert_service_from_json"
 DB_CHANNEL_ACCOUNT = "account_channel"
 DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
