--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -64,13 +64,12 @@ IDX_BUFFER_DURATION_ASSET = "10"
 # Settings for the development environment
 LOG_LEVEL = "debug"
 DATABASE_NAME = "us_int_daas"
-DATABASE_HOST = "localhost"
+DATABASE_HOST = "host.docker.internal"
 DATABASE_PORT = "5432"
 DATABASE_SCHEMA = "daas"
-SOLR_URL = "http://localhost:8983/solr"
+SOLR_URL = "http://host.docker.internal:8983/solr"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
-SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
@@ -88,7 +87,6 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
-SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
