--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -3,8 +3,10 @@
 LOG_LEVEL = "info"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
+SOLR_COLLECTION_ACCOUNT = "account"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
+SOLR_COLLECTION_SERVICE = "service"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 DB_FUNC_LOG = "daas_log"
@@ -70,7 +72,6 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://host.docker.internal:8983/solr"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
-SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 IDX_EVENT_RECOVER_KEY = "id"
@@ -87,7 +88,6 @@ DATABASE_SCHEMA = "daas"
 SOLR_URL = "http://localhost:8983/solr"
 SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
-SOLR_COLLECTION_ASSET = "asset"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 IDX_EVENT_RECOVER_KEY = "id"
