--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -9,6 +9,26 @@ SOLR_COLLECTION_ASSET = "asset"
 SOLR_COLLECTION_SERVICE = "service"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
+
+DOMAIN_NAME_ACCOUT = "ACCOUNT"
+DOMAIN_NAME_FACILITY = "FACILITY"
+DOMAIN_NAME_ASSET = "ASSET"
+DOMAIN_NAME_SERVICE = "SERVICE"
+IDX_BUFFER_SIZE_ACCOUNT = "10"
+IDX_BUFFER_SIZE_FACILITY = "10"
+IDX_BUFFER_SIZE_ASSET = "10"
+IDX_BUFFER_SIZE_SERVICE = "10"
+IDX_BUFFER_DURATION_ACCOUNT = "10"
+IDX_BUFFER_DURATION_FACILITY = "10"
+IDX_BUFFER_DURATION_ASSET = "10"
+IDX_BUFFER_DURATION_SERVICE = "10"
+IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
+IDX_FETCH_KEY_ACCOUNT = "acct_nbr"
+IDX_FETCH_KEY_FACILITy = "fac_nbr"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
+IDX_FETCH_KEY_SERVICE = "svc_nbr"
+
+# DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
 DB_FUNC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
 DB_FUNC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
@@ -33,18 +53,7 @@ DB_CHANNEL_ACCOUNT = "account_channel"
 DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
 DB_CHANNEL_SERVICE = "service_channel"
-DOMAIN_NAME_ACCOUT = "ACCOUNT"
-DOMAIN_NAME_FACILITY = "FACILITY"
-DOMAIN_NAME_ASSET = "ASSET"
-DOMAIN_NAME_SERVICE = "SERVICE"
-IDX_EVENT_RECOVER_KEY = "id"
-IDX_BUFFER_SIZE_ASSET = "10"
-IDX_BUFFER_DURATION_ASSET = "10"
-IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
-IDX_FETCH_KEY_ACCOUNT = "acc_nbr"
-IDX_FETCH_KEY_FACILITy = "facility_nbr"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
-IDX_FETCH_KEY_SERVICE = "svc_nbr"
+
 
 [development]
 # Settings for the development environment
@@ -58,7 +67,6 @@ SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 
@@ -74,7 +82,6 @@ SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 
@@ -90,6 +97,5 @@ SOLR_TIMEOUT = "10"
 SOLR_MAX_ROW = 1000
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
-IDX_EVENT_RECOVER_KEY = "id"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
