--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -23,10 +23,7 @@ IDX_BUFFER_DURATION_FACILITY = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
-IDX_FETCH_KEY_ACCOUNT = "acct_nbr"
-IDX_FETCH_KEY_FACILITy = "fac_nbr"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
-IDX_FETCH_KEY_SERVICE = "svc_nbr"
+IDX_FETCH_KEY = "domain_nbr"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
