--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -24,10 +24,10 @@ IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_EVENT_FETCH_KEY = "domain_nbr"
-IDX_FETCH_KEY_ACCOUNT = "acct_nbr"
-IDX_FETCH_KEY_FACILITY = "fac_nbr"
+IDX_FETCH_KEY_ACCOUNT = "account_nbr"
+IDX_FETCH_KEY_FACILITY = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
-IDX_FETCH_KEY_SERVICE = "svc_nbr"
+IDX_FETCH_KEY_SERVICE = "service_nbr"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
