--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -14,6 +14,7 @@ DOMAIN_NAME_ACCOUT = "ACCOUNT"
 DOMAIN_NAME_FACILITY = "FACILITY"
 DOMAIN_NAME_ASSET = "ASSET"
 DOMAIN_NAME_SERVICE = "SERVICE"
+API_AUTH_FACILITY_KEY = "facility_nbr"
 IDX_BUFFER_SIZE_ACCOUNT = "10"
 IDX_BUFFER_SIZE_FACILITY = "10"
 IDX_BUFFER_SIZE_ASSET = "10"
