--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -23,6 +23,7 @@ IDX_BUFFER_DURATION_ACCOUNT = "10"
 IDX_BUFFER_DURATION_FACILITY = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
+IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_EVENT_FETCH_KEY = "domain_nbr"
 IDX_FETCH_KEY_ACCOUNT = "account_nbr"
