--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -7,10 +7,11 @@ SOLR_COLLECTION_ACCOUNT = "account"
 SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 SOLR_COLLECTION_SERVICE = "service"
+SOLR_COLLECTION_USER = "user"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 
-DOMAIN_NAME_ACCOUT = "ACCOUNT"
+DOMAIN_NAME_ACCOUNT = "ACCOUNT"
 DOMAIN_NAME_FACILITY = "FACILITY"
 DOMAIN_NAME_ASSET = "ASSET"
 DOMAIN_NAME_SERVICE = "SERVICE"
@@ -19,10 +20,12 @@ IDX_BUFFER_SIZE_ACCOUNT = "10"
 IDX_BUFFER_SIZE_FACILITY = "10"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_SIZE_SERVICE = "10"
+IDX_BUFFER_SIZE_USER = "10"
 IDX_BUFFER_DURATION_ACCOUNT = "10"
 IDX_BUFFER_DURATION_FACILITY = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
+IDX_BUFFER_DURATION_USER = "10"
 IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_EVENT_FETCH_KEY = "domain_nbr"
@@ -30,6 +33,7 @@ IDX_FETCH_KEY_ACCOUNT = "account_nbr"
 IDX_FETCH_KEY_FACILITY = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
 IDX_FETCH_KEY_SERVICE = "service_nbr"
+IDX_FETCH_KEY_USER = "username"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
@@ -44,18 +48,22 @@ DB_FUNC_GET_ACCOUNT = "get_account"
 DB_FUNC_GET_FACILITY = "get_facility"
 DB_FUNC_GET_ASSET = "get_asset"
 DB_FUNC_GET_SERVICE= "get_service"
+DB_FUNC_GET_USER = "get_user"
 DB_FUNC_GET_BY_ID_ACCOUNT = "get_account_by_json"
 DB_FUNC_GET_BY_ID_FACILITY = "get_facility_by_json"
 DB_FUNC_GET_BY_ID_ASSET = "get_asset_by_json"
 DB_FUNC_GET_BY_ID_SERVICE = "get_service_by_json"
+DB_FUNC_GET_BY_ID_USER = "get_user_by_json"
 DB_FUNC_UPSERT_ACCOUNT = "upsert_account_from_json"
 DB_FUNC_UPSERT_FACILITY = "upsert_facility_from_json"
 DB_FUNC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_FUNC_UPSERT_SERVICE = "upsert_service_from_json"
+DB_FUNC_UPSERT_USER = "upsert_user_from_json"
 DB_CHANNEL_ACCOUNT = "account_channel"
 DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
 DB_CHANNEL_SERVICE = "service_channel"
+DB_CHANNEL_USER = "user_channel"
 DB_CHANNEL_PARENT_FACILITY = "account_channel"
 
 
