--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -8,6 +8,7 @@ SOLR_COLLECTION_FACILITY = "facility"
 SOLR_COLLECTION_ASSET = "asset"
 SOLR_COLLECTION_SERVICE = "service"
 SOLR_COLLECTION_USER = "user"
+SOLR_COLLECTION_USERFACILITY = "userfacility"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 
@@ -21,11 +22,13 @@ IDX_BUFFER_SIZE_FACILITY = "10"
 IDX_BUFFER_SIZE_ASSET = "10"
 IDX_BUFFER_SIZE_SERVICE = "10"
 IDX_BUFFER_SIZE_USER = "10"
+IDX_BUFFER_SIZE_USERFACILITY = "10"
 IDX_BUFFER_DURATION_ACCOUNT = "10"
 IDX_BUFFER_DURATION_FACILITY = "10"
 IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
 IDX_BUFFER_DURATION_USER = "10"
+IDX_BUFFER_DURATION_USERFACILITY = "10"
 IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_EVENT_FETCH_KEY = "domain_nbr"
@@ -34,6 +37,7 @@ IDX_FETCH_KEY_FACILITY = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
 IDX_FETCH_KEY_SERVICE = "service_nbr"
 IDX_FETCH_KEY_USER = "username"
+IDX_FETCH_KEY_USERFACILITY = "username"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
@@ -43,27 +47,30 @@ DB_FUNC_GET_INDEX_OVERRIDE = "get_index_override"
 DB_FIELD_INDEX_OVERRIDE_SOURCE_TS = "index_source_ts"
 DB_FIELD_INDEX_OVERRIDE_TARGET_TS = "index_target_ts"
 DB_FUNC_CLEAN_INDEX_OVERRIDE = "clean_index_override"
-DB_FUNC_GET_USER_FACILITY = "get_user_facility"
 DB_FUNC_GET_ACCOUNT = "get_account"
 DB_FUNC_GET_FACILITY = "get_facility"
 DB_FUNC_GET_ASSET = "get_asset"
 DB_FUNC_GET_SERVICE= "get_service"
 DB_FUNC_GET_USER = "get_user"
+DB_FUNC_GET_USERFACILITY = "get_user_facility"
 DB_FUNC_GET_BY_ID_ACCOUNT = "get_account_by_json"
 DB_FUNC_GET_BY_ID_FACILITY = "get_facility_by_json"
 DB_FUNC_GET_BY_ID_ASSET = "get_asset_by_json"
 DB_FUNC_GET_BY_ID_SERVICE = "get_service_by_json"
 DB_FUNC_GET_BY_ID_USER = "get_user_by_json"
+DB_FUNC_GET_BY_ID_USERFACILITY = "get_user_facility_by_json"
 DB_FUNC_UPSERT_ACCOUNT = "upsert_account_from_json"
 DB_FUNC_UPSERT_FACILITY = "upsert_facility_from_json"
 DB_FUNC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_FUNC_UPSERT_SERVICE = "upsert_service_from_json"
 DB_FUNC_UPSERT_USER = "upsert_user_from_json"
+DB_FUNC_UPSERT_USERFACILITY = "upsert_user_from_json"
 DB_CHANNEL_ACCOUNT = "account_channel"
 DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
 DB_CHANNEL_SERVICE = "service_channel"
 DB_CHANNEL_USER = "user_channel"
+DB_CHANNEL_USERFACILITY = "userfacility_channel"
 DB_CHANNEL_PARENT_FACILITY = "account_channel"
 
 
