--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -37,11 +37,11 @@ IDX_FETCH_KEY_FACILITY = "facility_nbr"
 IDX_FETCH_KEY_ASSET = "asset_nbr"
 IDX_FETCH_KEY_SERVICE = "service_nbr"
 IDX_FETCH_KEY_USER = "username"
-IDX_FETCH_KEY_USERFACILITY = "username"
+IDX_FETCH_KEY_USERFACILITY = "id"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
-DB_FUNC_GET_USERFACILITY_BY_USER = "get_user_facility_by_user"
+DB_FUNC_GET_USERFACILITY_BY_USER = "get_userfacility_by_user"
 DB_FUNC_GET_EVENT_NOTIFICATION_BUFFER = "get_event_notification_buffer"
 DB_FUNC_CLEAN_EVENT_NOTIFICATION_BUFFER = "clean_event_notification_buffer"
 DB_FUNC_GET_INDEX_OVERRIDE = "get_index_override"
@@ -53,13 +53,13 @@ DB_FUNC_GET_FACILITY = "get_facility"
 DB_FUNC_GET_ASSET = "get_asset"
 DB_FUNC_GET_SERVICE= "get_service"
 DB_FUNC_GET_USER = "get_user"
-DB_FUNC_GET_USERFACILITY = "get_user_facility"
+DB_FUNC_GET_USERFACILITY = "get_userfacility"
 DB_FUNC_GET_BY_ID_ACCOUNT = "get_account_by_json"
 DB_FUNC_GET_BY_ID_FACILITY = "get_facility_by_json"
 DB_FUNC_GET_BY_ID_ASSET = "get_asset_by_json"
 DB_FUNC_GET_BY_ID_SERVICE = "get_service_by_json"
 DB_FUNC_GET_BY_ID_USER = "get_user_by_json"
-DB_FUNC_GET_BY_ID_USERFACILITY = "get_user_facility_by_json"
+DB_FUNC_GET_BY_ID_USERFACILITY = "get_userfacility_by_json"
 DB_FUNC_UPSERT_ACCOUNT = "upsert_account_from_json"
 DB_FUNC_UPSERT_FACILITY = "upsert_facility_from_json"
 DB_FUNC_UPSERT_ASSET = "upsert_asset_from_json"
