--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -65,7 +65,7 @@ DB_FUNC_UPSERT_FACILITY = "upsert_facility_from_json"
 DB_FUNC_UPSERT_ASSET = "upsert_asset_from_json"
 DB_FUNC_UPSERT_SERVICE = "upsert_service_from_json"
 DB_FUNC_UPSERT_USER = "upsert_user_from_json"
-DB_FUNC_UPSERT_USERFACILITY = "upsert_user_from_json"
+DB_FUNC_UPSERT_USERFACILITY = "upsert_userfacility_from_json"
 DB_CHANNEL_ACCOUNT = "account_channel"
 DB_CHANNEL_FACILITY = "facility_channel"
 DB_CHANNEL_ASSET = "asset_channel"
