user/userfacility configs.

--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -12,11 +12,29 @@ SOLR_COLLECTION_USERFACILITY = "userfacility"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 
+AUTH_PORT = "9000"
 DOMAIN_NAME_ACCOUNT = "ACCOUNT"
+DOMAIN_PORT_ACCOUNT = "9001"
 DOMAIN_NAME_FACILITY = "FACILITY"
+DOMAIN_PORT_FACILITY = "9002"
 DOMAIN_NAME_ASSET = "ASSET"
+DOMAIN_PORT_ASSET = "9003"
 DOMAIN_NAME_SERVICE = "SERVICE"
+DOMAIN_PORT_SERVICE = "9004"
+DOMAIN_NAME_USER = "USER"
+DOMAIN_PORT_USER = "9005"
+DOMAIN_NAME_USERFACILITY = "USERFACILITY"
+DOMAIN_PORT_USERFACILITY = "9006"
 API_AUTH_FACILITY_KEY = "facility_nbr"
+IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
+IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
+IDX_EVENT_FETCH_KEY = "domain_nbr"
+IDX_FETCH_KEY_ACCOUNT = "account_nbr"
+IDX_FETCH_KEY_FACILITY = "facility_nbr"
+IDX_FETCH_KEY_ASSET = "asset_nbr"
+IDX_FETCH_KEY_SERVICE = "service_nbr"
+IDX_FETCH_KEY_USER = "username"
+IDX_FETCH_KEY_USERFACILITY = "id"
 IDX_BUFFER_SIZE_ACCOUNT = "10"
 IDX_BUFFER_SIZE_FACILITY = "10"
 IDX_BUFFER_SIZE_ASSET = "10"
@@ -29,15 +47,6 @@ IDX_BUFFER_DURATION_ASSET = "10"
 IDX_BUFFER_DURATION_SERVICE = "10"
 IDX_BUFFER_DURATION_USER = "10"
 IDX_BUFFER_DURATION_USERFACILITY = "10"
-IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
-IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
-IDX_EVENT_FETCH_KEY = "domain_nbr"
-IDX_FETCH_KEY_ACCOUNT = "account_nbr"
-IDX_FETCH_KEY_FACILITY = "facility_nbr"
-IDX_FETCH_KEY_ASSET = "asset_nbr"
-IDX_FETCH_KEY_SERVICE = "service_nbr"
-IDX_FETCH_KEY_USER = "username"
-IDX_FETCH_KEY_USERFACILITY = "id"
 
 # DATABASE CONFIGURATIONS
 DB_FUNC_LOG = "daas_log"
@@ -73,7 +82,6 @@ DB_CHANNEL_SERVICE = "service_channel"
 DB_CHANNEL_USER = "user_channel"
 DB_CHANNEL_USERFACILITY = "userfacility_channel"
 DB_CHANNEL_PARENT_FACILITY = "account_channel"
-
 
 [development]
 # Settings for the development environment
