--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -12,6 +12,7 @@ SOLR_COLLECTION_USERFACILITY = "userfacility"
 PAGINATION_SIZE_DB = "10"
 PAGINATION_SIZE_SOLR = "10"
 
+API_BASE_URL = "http://127.0.0.1"
 AUTH_PORT = "9000"
 DOMAIN_NAME_ACCOUNT = "ACCOUNT"
 DOMAIN_PORT_ACCOUNT = "9001"
