--- a/daas_py_config/settings.toml
+++ b/daas_py_config/settings.toml
@@ -27,6 +27,7 @@ DOMAIN_PORT_USER = "9005"
 DOMAIN_NAME_USERFACILITY = "USERFACILITY"
 DOMAIN_PORT_USERFACILITY = "9006"
 API_AUTH_FACILITY_KEY = "facility_nbr"
+IDX_BUFFER_RETRY_SECONDS = "60"
 IDX_OVERRIDE_CONCURRENT_THREAD_COUNT = "5"
 IDX_OVERRIDE_TIMESTEP_DAY_SIZE = "7"
 IDX_EVENT_FETCH_KEY = "domain_nbr"
